set up login signup model logic and errors and routing

--- a/frontend/src/styles/_accounts.scss
+++ b/frontend/src/styles/_accounts.scss
@@ -26,6 +26,7 @@
       color: #f9fafb;
     }
 
+  
     button {
       padding: 0.75rem;
       border: none;
@@ -55,4 +56,17 @@
       text-decoration: underline;
     }
   }
+}
+
+.guest-text {
+  color : #facc15;
+  font-weight: bolder;
+
+  &:hover {
+    color : #ffefb0;
+    cursor : pointer;
+    text-decoration: underline;
+  }
+
+
 }
