finished local main menu logic, also added modal renderer (not very cute)

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,7 +1,7 @@
 @use './accounts' as *;
 @use './home' as *;
 @use './scrollbar';
-@use './modal-renderer' as *;
+@use './modals';
 
 /* Import a clean UI font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
