--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -9,6 +9,7 @@
     font-family: "Inter", sans-serif;
 
   .toggle-navigator-btn {
+    z-index: 100;
     position: fixed;
     top: 2rem;
     left: 1rem;
@@ -164,11 +165,15 @@
   
 
 .folder-item-header .item-label {
-  margin: 0 auto;           /* keeps it dead center always */
+  all: unset;
+  border: none;
+  background-color: none;
+  margin: 0 auto;        
   text-align: center;
   font-size: clamp(0.90em, 0.8em, 0.6em);
   font-weight: 500;
   color: #f9fafb;
+  width: 50%;
 }
 
 .folder-item-header p {
@@ -213,17 +218,79 @@
     width: 100vw;
     display: grid;
     gap: 3em;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     overflow-y: scroll;
     overflow-x: scroll;
+
     
     .project-container {
         border-radius: 1em;
         padding: 1em;
+        flex-grow: 0;
+        position: relative;  
         background-color: #152c3b;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+            .del-btn,
+          .project-label .lucide-square-pen {
+            cursor: pointer;
+            position: absolute;       
+            opacity: 0;               
+            transition: opacity 0.2s ease;
+          }
+
+        .date {
+          position: relative;
+          align-self: flex-start;
+        }
+
+        .del-btn {
+          margin-top: 1em;
+          top: 0;
+          background: none;
+          border : none;
+          align-self: flex-end;
+          position: absolute;
+          font-size: 1em;
+          color: red;
+        }
+
+        .project-label {
+          border: none;
+          display: flex;
+          flex-direction: row;
+          align-items:center;
+          justify-content: center;
+
+          img {
+            width: fit-content;
+          }
+
+          div {
+            right: 0;
+            .lucide-square-pen {
+              color : white;
+              right: 0;
+            }            
+          }
+
+
+          input {
+            align-self: center;
+            justify-self: center;
+            all : unset;
+            color: #badaff;
+            font-size: 1.0rem;
+            margin: 0;
+            background-color: none;
+          }
+
+        } 
+
 
         img {
             width: 12em;
@@ -250,4 +317,22 @@
 
     }
   }
+}
+
+.add-project-btn {
+  align-self: center;
+  justify-self: center;
+  width: min-content;
+  height: min-content;
+  padding: 1em;
+  font-size: 1.4em;
+  background-color: palevioletred;
+  color : white;
+  border: none;
+  border-radius: 6em;
+  
+  &:hover {
+    color : black;
+  }  
+
 }
