--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,7 +1,8 @@
 @use './accounts' as *;
 @use './home' as *;
 @use './scrollbar';
-@use './modals';
+@use './modals' as *;
+@use './navbar' as *;
 
 /* Import a clean UI font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
