--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -233,8 +233,14 @@
         background-color: #152c3b;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
+
+        img {
+            width: fit-content;
+            align-self: center;
+            justify-self: center;
+          }
 
             .del-btn,
           .project-label .lucide-square-pen {
@@ -260,24 +266,11 @@
           color: red;
         }
 
-        .project-label {
-          border: none;
-          display: flex;
-          flex-direction: row;
-          align-items:center;
-          justify-content: center;
-
-          img {
-            width: fit-content;
-          }
-
-          div {
-            right: 0;
-            .lucide-square-pen {
-              color : white;
-              right: 0;
-            }            
-          }
+      .project-label {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%; /* important so children can spread out */
 
 
           input {
@@ -291,6 +284,14 @@
           }
 
         } 
+
+      .svg-div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+      }
+
 
 
         img {
