--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -8,6 +8,13 @@
 // Grid
 @use './grid/grid' as *;
 @use './grid/grid-mobile' as *;
+@use './grid/grid-desktop' as *;
+
+// Side Dropper
+@use './side_dropper/side-dropper' as *;
+@use './side_dropper/side-dropper-mobile' as *;
+@use './side_dropper/side-dropper-desktop' as *;
+
 
 /* Import a clean UI font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
