--- a/frontend/src/styles/gridItems/timer/_timer.scss
+++ b/frontend/src/styles/gridItems/timer/_timer.scss
@@ -111,3 +111,36 @@
 
 
 }
+
+.stopwatch-btn-container {
+    margin-top: 5em;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    button {
+        font-size: 1em;
+        font-weight: bold;
+        border: none;
+        padding: 1em;
+        border-radius: 1em;
+        margin-left: 0.8em;
+        margin-right: 0.8em;
+        background-color: rgb(196, 188, 188);
+
+        &:hover {
+            scale: 1.1;
+            background-color: rgb(223, 213, 213);
+
+        }
+
+    }
+
+}
+
+.time-label {
+    font-weight: bold;
+    font-size: 2em;
+}
