ported over all tracker component styles. set up backend component creation and query

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -25,6 +25,8 @@
 // timer 
 @use './gridItems/timer/timer-number-picker' as *;
 @use './gridItems/timer/timer' as *;
+// tracker 
+@use './gridItems/Tracker/tracker' as *;
 
 
 /* Import a clean UI font */
