set up tracker input and output component, NEXT im setting up drag and drop functionality for them with dnd kit

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -27,6 +27,8 @@
 @use './gridItems/timer/timer' as *;
 // tracker 
 @use './gridItems/Tracker/tracker' as *;
+// tracker input & output
+@use './gridItems/Tracker/connections' as *;
 
 
 /* Import a clean UI font */
