set up on drop logic and handler, next setting up backend calls

--- a/frontend/src/styles/gridItems/Tracker/_connections.scss
+++ b/frontend/src/styles/gridItems/Tracker/_connections.scss
@@ -14,8 +14,8 @@
         position: absolute;
         align-self: center;
         justify-self: center;
-        margin-left: 2em;
-        margin-bottom: 0.4em;
+        margin-left: 1em;
+        margin-top: -1.7em;
         color :black; 
 
         &:hover {
@@ -45,8 +45,8 @@
         position: absolute;
         align-self: center;
         justify-self: center;
-        margin-left: 3em;
-        margin-bottom: 0.4em;
+        margin-left: 1em;
+        margin-top: -1.7em;
         color :black; 
     
         &:hover {
