--- a/frontend/src/styles/_modals.scss
+++ b/frontend/src/styles/_modals.scss
@@ -48,3 +48,38 @@
     }
   }
 }
+
+.connection-modal {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 12px;
+  border: 1px solid black;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  max-width: 90vw;
+
+  .big-h2 {
+    margin-left: 2em;
+    align-self: flex-start;
+    font-size: 2em;
+    margin-bottom: 0.25em;
+  }
+
+  .tiny-h2 {
+    font-size: 1em;
+    margin-bottom: 1.5em;
+  }
+
+  .exit-btn {
+    width: 5em;
+    padding: 1em;
+    border-radius: 1em;
+    border: none;
+    cursor: pointer;
+  }
+
+}
