--- a/frontend/src/styles/gridItems/Tracker/_tracker.scss
+++ b/frontend/src/styles/gridItems/Tracker/_tracker.scss
@@ -14,6 +14,37 @@
         justify-content: space-between;
         background-color: rgb(66, 66, 66);
 
+        form {
+
+            text-align: center;
+
+            p {
+                text-align: center;
+                border : none;
+                background-color: rgb(66, 66, 66);
+                width: 50%;
+                font-size: 2em;
+          
+            }            
+
+            input {
+                text-align: center;
+                border : none;
+                background-color: rgb(66, 66, 66);
+                width: 50%;
+                font-size: 2em;
+
+
+                &:focus {
+                    outline: none;
+                    box-shadow: none;
+                }
+
+            }
+
+        }
+
+
         button {
             cursor: pointer;
             border : none;
@@ -70,6 +101,8 @@
             font-size: 0.7em;
         }
 
+        
+
         button {
             cursor: pointer;
             font-size: 0.7em;
@@ -95,55 +128,76 @@
         background-color: rgb(172, 172, 172);
 
 
-        /* MIGHT CAUSE STYLING PROBLEMS */
-
-        .timer-menu-item {
-            display: grid;
-            grid-template-columns: 4fr 1fr;
-
-            .timer-menu-delete-btn {
-                align-self: center;
-                justify-self: center;
-                background: none;
-                border: none;
-                margin-left: 0.3em;
-                color: red;
-            }
-
+        /* ADD BTN */
+        .add-btn {
+            position: absolute;
+            border-radius: 1em;
+            border : none;
+            padding : 0.5em;
+            font-size: 1em;
+            font-weight: bold;
+            align-self: center;
+            margin-top: 170%;
+            background-color: rgb(212, 240, 231);
 
         }
+
+
+
+        /* timer menu */
+        .timer-menu-container {
+            margin-top: 1em;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            .tracker-menu-item-container {
+                font-size: 0.9em;
+                // display: flex;
+                // flex-direction: row;
+                display: grid;
+                margin-left: 0.8em;
+                grid-template-columns: 1fr 1fr 1fr;
+                margin-top: 1em;
+                margin-bottom: 1em;
+
+
+                input {
+                    background-color: rgb(175, 173, 173);
+                    border: black 1px solid; 
+                    margin-left: 0.4em;
+
+                }
+
+                button {
+                    background-color: rgb(172, 172, 172);
+                    // margin-left: 1.2em;
+                    background-color: none;
+                    border: none;
+                    color: red;
+                    font-size: 0.8em;
+                    font-weight: bold;
+
+                    &:hover {
+                        scale: 1;
+                    }
+
+                }
+
+
+            }
+
+        } 
+
+
+
 
     }
 
-}
 
 
-/* Timer Tracker Menu */
-/* Only Needs to account for Dropdown-Counters*/
 
-.timer-menu-container {
-    display: grid; 
-    grid-template-rows: auto;
-    gap: 0;
-    padding: 4px; 
-    align-items: start;
-    justify-items: center;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    
-        .add-btn {
-            justify-self: baseline;
-            border: none;
-            cursor: pointer;
-            border-radius: 1em;
-            padding: 0.2em;
-            background-color: gray;
-            font-size: 1.5em;
 
-            &:hover {
-                background-color: rgb(112, 112, 112);
-            }
-        }
 
 
 }
