--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -29,6 +29,8 @@
 @use './gridItems/Tracker/tracker' as *;
 // tracker input & output
 @use './gridItems/Tracker/connections' as *;
+// sticky note
+@use './gridItems/sticky_notes/sticky_notes' as *;
 
 
 /* Import a clean UI font */
