set up basic table name changing. set up models 1.0

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -31,6 +31,8 @@
 @use './gridItems/Tracker/connections' as *;
 // sticky note
 @use './gridItems/sticky_notes/sticky_notes' as *;
+// table
+@use './gridItems/table/table' as *;
 
 
 /* Import a clean UI font */
