--- a/frontend/src/styles/note_navigator/_note_navigator_body_folder.scss
+++ b/frontend/src/styles/note_navigator/_note_navigator_body_folder.scss
@@ -1,37 +1,196 @@
 .folder-pannel-body {
+  // when no folders
+  .no-folder-container {
+    margin-top: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    .no-folder-container {
-        margin-top: 2em;
+    p {
+      text-align: center;
+      color: rgb(221, 221, 221);
+      font-size: clamp(0.6em, 0.8em, 1em);
+    }
+
+    button {
+      font-size: 1.2em;
+      margin-top: 1em;
+      border: none;
+      border-radius: 1em;
+      padding: 0.4em;
+      background: linear-gradient(to bottom, #2e293b, #ffffff);
+      &:hover {
+        scale: 1.1;
+      }
+    }
+  }
+
+  .folder-pannel-item-container {
+    
+    // to the left of each note item (name & icon)
+    .note-icon-wrapper {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
+        align-items: flex-start;
         justify-content: center;
+        padding-left: 0.6em;
 
-        p {
-            text-align: center;
-            color: rgb(221, 221, 221);
-            font-size: clamp(0.6em, 0.8em, 1em)
+
+        .folder-corner {
+            padding-top: 1em;
+            // color: rgb(24, 20, 24);
+            color : white;
+            font-size: 0.6em;
+        }
+    }    
+
+
+
+
+    // NO Notes Container
+    .no-notes-container {
+        display: flex; 
+        flex-direction: row;
+        
+        .dot {
+            color : white;
+            margin-right: 0.4em;
+        }
+
+        .no-notes-text {
+            color: white;
+            font-size: clamp(0.6em, 0.8em, 1.1rem);
         }
 
         button {
-            font-size: 1.2em;
-            margin-top: 1em;
+            padding: 0.2em;
+            padding-left: 0.2em;
+            padding-right: 0.2em;
+            margin-left: 0.6em;
+            font-size: clamp(0.6em, 0.8em, 1.1rem);
+            cursor: pointer;
+
             border: none;
-            border-radius: 1em;
-            padding: 0.4em;
-            background: linear-gradient(to bottom,
-                    #2e293b,
-                    #ffffff);
+            color : white;
+            font-weight: bold;
+            background-color: rgb(127, 161, 255);
+            border-radius: 0.6em;
+
             &:hover {
-                scale : 1.1;
+                background-color: rgb(79, 108, 187);
+
             }
 
 
         }
 
-
     }
 
 
+    // folder icon
+    .folder-container {
+      cursor: pointer;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      padding: 0.2em;
 
+      &:hover {
+        border-radius: 2em;
+        background-color: rgb(58, 52, 58);
+      }
+
+      &.active {
+        margin: 0.2em;
+        border-radius: 2em;
+        background-color: rgb(58, 52, 58);
+      }
+
+
+
+      .folder-btn {
+        background-color: transparent;
+        border: none;
+        color: white;
+      }
+
+      input {
+        all: unset;
+        margin-left: 0.2em;
+        font-size: 0.8em;
+        background-color: transparent;
+        border: none;
+        color: white;
+        width: fit-content;
+      }
+    }
+
+    // note icon
+    .note-container {
+      margin-top: 0.2em;
+      margin-bottom: 0.2em;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      padding: 0.2em;
+      cursor: pointer;
+      overflow-x: scroll;
+
+      &:hover {
+        border-radius: 2em;
+        background-color: rgb(58, 52, 58);
+      }
+
+
+      &.active {
+        border-radius: 2em;
+        background-color: rgb(58, 52, 58);
+      }
+
+
+      .note-btn {
+        background-color: transparent;
+        border: none;
+        color: white;
+      }
+
+      input {
+        all: unset;
+        margin-top: -0.1em;
+        margin-left: 0.2em;
+        font-size: 0.8em;
+        background-color: transparent;
+        border: none;
+        color: white;
+        width: fit-content;
+      }
+
+      .note-del-btn {
+        background-color: transparent;
+        border: none;
+        color : white;
+        justify-self: flex-end;
+        align-self: flex-end;
+        margin-left: 1em;
+        margin-right: 1em;
+        margin-top: 0.03em;
+
+        &:hover{
+          scale : 1.1
+        }
+
+      }
+
+      .pencil-btn {
+        margin-top: 0.3em;
+
+        &:hover{
+          scale : 1.1
+        }
+
+      }
+
+    }
+  }
 }
