--- a/frontend/src/styles/note_navigator/_note_navigator_parts_headers.scss
+++ b/frontend/src/styles/note_navigator/_note_navigator_parts_headers.scss
@@ -6,14 +6,15 @@
         top: 8.1%;
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(6, 1fr);
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         height: 100%;
 
         // FOLDER PANEL
         .folder-pannel-container {
-            border: solid black 0.1em;
             grid-column: 1/3;
+            border: solid black 0.1em;
             background-color: rgb(24, 20, 24);
+
 
             // FOLDER HEADER
             .note-editor-header {
@@ -46,8 +47,8 @@
 
         // NOTE PANEL
         .note-editor-container {
+            grid-column: 3/5;
             border: solid black 0.1em;
-            grid-column: 3/7;
             transition: grid-column 0.5s ease;
             background-color: rgb(17, 14, 17);
             color: white;
