--- a/frontend/src/styles/note_navigator/_note_navigator_parts_headers.scss
+++ b/frontend/src/styles/note_navigator/_note_navigator_parts_headers.scss
@@ -41,6 +41,21 @@
                     font-weight: bold;
                     color : rgb(211, 211, 211);
                 }
+
+                .add-folder-btn {
+                    cursor : pointer;
+                    font-weight: bold;
+                    border-radius: 1em;
+                    padding: 0.2em;
+                    background-color: azure;
+                    color : black;
+
+                    &:hover {
+                        background-color: rgb(184, 184, 184);
+                    }
+
+                }
+                
             }
         }
         /////////////////
