--- a/frontend/src/styles/_accounts.scss
+++ b/frontend/src/styles/_accounts.scss
@@ -1,3 +1,19 @@
+
+.accounts-container {
+  width: 100%;
+  height: 100%;
+  margin-top : -1em;
+  background-image:
+  linear-gradient(to right, rgba(0, 0, 0, 0.1) 1px, transparent 1px),
+  linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 1px, transparent 1px);
+  background-size: 4em 4em;
+  background-color: rgb(212, 212, 212);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .auth-container {
   max-width: 400px;
   margin: 2rem auto;
